h4_vision/check_errors_v16.txt
    Checking h4_shared v0.1.0 (D:\PROJECTS\h4_GameHack\h4_shared)
   Compiling h4_vision v0.1.0 (D:\PROJECTS\h4_GameHack\h4_vision)
    Checking h4_engine v0.1.0 (D:\PROJECTS\h4_GameHack\h4_engine)
warning: h4_vision@0.1.0: warning: Component is neither used nor exported
warning: h4_vision@0.1.0:    --> D:\PROJECTS\h4_GameHack\h4_vision\ui\main.slint:122:1
warning: h4_vision@0.1.0:     |
warning: h4_vision@0.1.0: 122 | component H4ButtonNeon inherits H4ButtonBase { drop-shadow-blur: 5px; drop-shadow-color: H4Themes.active_accent; }
warning: h4_vision@0.1.0:     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error[E0308]: mismatched types
   --> h4_vision\src\main.rs:301:70
    |
301 | ...mode = slint::invoke_from_event_loop(move || { ui_inner.upgrade().map(|u| u.get_filter_mode()).unwrap_or_default() }).await.unwrap_or_...
    |           ----------------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---------
    |           |                                       |
    |           |                                       expected `()`, found `SharedString`
    |           expected this to be `()`
    |
help: consider using a semicolon here
    |
301 |                 let f_mode = slint::invoke_from_event_loop(move || { ui_inner.upgrade().map(|u| u.get_filter_mode()).unwrap_or_default(); }).await.unwrap_or_default();
    |                                                                                                                                         +
help: consider using a semicolon here
    |
301 |                 let f_mode = slint::invoke_from_event_loop(move || { ui_inner.upgrade().map(|u| u.get_filter_mode()).unwrap_or_default() }).await;.unwrap_or_default();
    |                                                                                                                                                  +

error[E0277]: `Result<(), EventLoopError>` is not a future
   --> h4_vision\src\main.rs:301:141
    |
301 | ...mode = slint::invoke_from_event_loop(move || { ui_inner.upgrade().map(|u| u.get_filter_mode()).unwrap_or_default() }).await.unwrap_or_...
    |           -------------------------------------------------------------------------------------------------------------- ^^^^^ `Result<(), EventLoopError>` is not a future
    |           |
    |           this call returns `Result<(), EventLoopError>`
    |
    = help: the trait `Future` is not implemented for `Result<(), EventLoopError>`
    = note: Result<(), EventLoopError> must be a future or must implement `IntoFuture` to be awaited
    = note: required for `Result<(), EventLoopError>` to implement `IntoFuture`
help: remove the `.await`
    |
301 -                 let f_mode = slint::invoke_from_event_loop(move || { ui_inner.upgrade().map(|u| u.get_filter_mode()).unwrap_or_default() }).await.unwrap_or_default();
301 +                 let f_mode = slint::invoke_from_event_loop(move || { ui_inner.upgrade().map(|u| u.get_filter_mode()).unwrap_or_default() }).unwrap_or_default();
    |

error[E0282]: type annotations needed
   --> h4_vision\src\main.rs:301:30
    |
301 | ...mode = slint::invoke_from_event_loop(move || { ui_inner.upgrade().map(|u| u.get_filter_mode()).unwrap_or_default() }).await.unwrap_or_...
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error[E0308]: mismatched types
   --> h4_vision\src\main.rs:350:70
    |
350 | ...mode = slint::invoke_from_event_loop(move || { ui_inner.upgrade().map(|u| u.get_filter_mode()).unwrap_or_default() }).await.unwrap_or_...
    |           ----------------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---------
    |           |                                       |
    |           |                                       expected `()`, found `SharedString`
    |           expected this to be `()`
    |
help: consider using a semicolon here
    |
350 |                 let f_mode = slint::invoke_from_event_loop(move || { ui_inner.upgrade().map(|u| u.get_filter_mode()).unwrap_or_default(); }).await.unwrap_or_default();
    |                                                                                                                                         +
help: consider using a semicolon here
    |
350 |                 let f_mode = slint::invoke_from_event_loop(move || { ui_inner.upgrade().map(|u| u.get_filter_mode()).unwrap_or_default() }).await;.unwrap_or_default();
    |                                                                                                                                                  +

error[E0277]: `Result<(), EventLoopError>` is not a future
   --> h4_vision\src\main.rs:350:141
    |
350 | ...mode = slint::invoke_from_event_loop(move || { ui_inner.upgrade().map(|u| u.get_filter_mode()).unwrap_or_default() }).await.unwrap_or_...
    |           -------------------------------------------------------------------------------------------------------------- ^^^^^ `Result<(), EventLoopError>` is not a future
    |           |
    |           this call returns `Result<(), EventLoopError>`
    |
    = help: the trait `Future` is not implemented for `Result<(), EventLoopError>`
    = note: Result<(), EventLoopError> must be a future or must implement `IntoFuture` to be awaited
    = note: required for `Result<(), EventLoopError>` to implement `IntoFuture`
help: remove the `.await`
    |
350 -                 let f_mode = slint::invoke_from_event_loop(move || { ui_inner.upgrade().map(|u| u.get_filter_mode()).unwrap_or_default() }).await.unwrap_or_default();
350 +                 let f_mode = slint::invoke_from_event_loop(move || { ui_inner.upgrade().map(|u| u.get_filter_mode()).unwrap_or_default() }).unwrap_or_default();
    |

error[E0282]: type annotations needed
   --> h4_vision\src\main.rs:350:30
    |
350 | ...mode = slint::invoke_from_event_loop(move || { ui_inner.upgrade().map(|u| u.get_filter_mode()).unwrap_or_default() }).await.unwrap_or_...
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

Some errors have detailed explanations: E0277, E0282, E0308.
For more information about an error, try `rustc --explain E0277`.
warning: h4_vision@0.1.0: warning: Component is neither used nor exported
warning: h4_vision@0.1.0:    --> D:\PROJECTS\h4_GameHack\h4_vision\ui\main.slint:122:1
warning: h4_vision@0.1.0:     |
warning: h4_vision@0.1.0: 122 | component H4ButtonNeon inherits H4ButtonBase { drop-shadow-blur: 5px; drop-shadow-color: H4Themes.active_accent; }
warning: h4_vision@0.1.0:     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: could not compile `h4_vision` (bin "h4_vision") due to 6 previous errors
